<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Perfil.EditarPerfil">

    <ImageView
        android:id="@+id/img_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/estado" />

    <EditText
        android:id="@+id/estado_editar_perfil"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/nombre_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:text="@string/correo" />

    <EditText
        android:id="@+id/correo_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar_editar_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/cancelar"
            android:layout_marginRight="50dp"/>

        <Button
            android:id="@+id/btn_aceptar_editar_perfil"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />


    </LinearLayout>

</LinearLayout>